# OpenAgent

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  chainlit.md  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
.github/workflows/: backend-ci.yml  build-and-push-docker-image.yml  build-docker-images.yml  ci.yml  gen_allure_report.yml  run_test_and_gen_report.yml  test.yml
Executor/: docker-compose.yaml  package.json  pnpm-lock.yaml
Executor/contracts/: foundry.toml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  app.yaml  app.yml  docker-compose.yaml  main.py  pyproject.toml  run.sh  setup.cfg
backend/copilot/: app.py
backend/copilot/agent/: ctx_var.py  function_agent.py  postgres_history.py  session_title.py  stream_callback.py  suggested_question.py  system_prompt.py
backend/copilot/db/: database.py  models.py
backend/copilot/dto/: chat_history.py  session.py
backend/copilot/llmops/: chainlit_app.py
backend/copilot/router/: chat.py  onboarding.py  session.py  task.py
backend/copilot/service/: chat.py  history.py  session.py  task.py
backend/copilot/tool/: account_tool.py  collection_tool.py  dapp_tool.py  feed_tool.py  network_tool.py  swap_tool.py  token_tool.py  transfer_tool.py  wallet_tool.py
backend/openagent/: app.py
backend/openagent/agent/: cache.py  function_agent.py  postgres_history.py  session_title.py  stream_callback.py  suggested_question.py  system_prompt.py
backend/openagent/bot/: agent.py  app.py  followup.py  memory.py  prompt.py  random_question.py
backend/openagent/bot/multi_agent/: main.py
backend/openagent/bot/multi_agent/agents/: agent_factory.py  asset_management.py  block_explore.py  block_stat_agent.py  feed_agent.py  market_agent.py  market_analysis.py  project_management.py  social_track.py  wallet_agent.py
backend/openagent/bot/multi_agent/tools/: balance_tool.py  browser.py  coin_market_tool.py  nft_balance_tool.py  project_tool.py  token_balance_tool.py
backend/openagent/bot/multi_agent/workflows/: member.py  supervisor_chain.py  workflow.py
backend/openagent/conf/: env.py
backend/openagent/db/: database.py  models.py
backend/openagent/dto/: cb_content.py  chat_history.py  chat_req.py  error.py  mutation.py  session.py  task.py
backend/openagent/experts/: __init__.py  account_expert.py  account_tool.py  article_expert.py  block_stat_expert.py  collection_expert.py  dapp_expert.py  dapp_tool.py  dune_expert.py  executor_expert.py  feed_expert.py  feed_tool.py  google_expert.py  google_tool.py  hoot_expert.py  network_expert.py  network_tool.py  nft_expert.py  price_expert.py  search_expert.py  swap_expert.py  swap_tool.py  token_expert.py  transfer_expert.py  transfer_tool.py  wallet_expert.py  wallet_tool.py
backend/openagent/index/: feed_indexing.py  feed_scrape.py  pgvector_store.py
backend/openagent/llmops/: chainlit_app.py  main.py
backend/openagent/router/: chat.py  onboarding.py  session.py  task.py
backend/openagent/service/: chat.py  history.py  session.py  task.py
backend/openagent/tool/: collection_tool.py  swap_tool.py  token_tool.py  transfer_tool.py  wallet_tool.py
backend/openagent/ui/: __init__.py  app.py
backend/openagent/ui/.chainlit/: config.toml
backend/openagent/ui/public/: test.css
backend/static/: websocket_test.html
backend/tests/: bot.py  cases.py
backend/widget/: package.json
backend/widget/src/: main.tsx
client/: .eslintrc.json  Dockerfile  README.md  docker-compose.db.yml  next.config.mjs  pnpm-lock.yaml  tailwind.config.ts
client/src/: env.mjs
contracts/: package.json  pnpm-lock.yaml  slither.config.json
contracts/script/: Deploy.s.sol  DeployConfig.s.sol
contracts/src/: Error.sol
contracts/tools/: checkStorageLayout.sh  createBindings.sh
executor/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
executor/contracts/: .env.example  Makefile  README.md  package.json
executor/prisma/: schema.prisma
executor/src/: app.module.ts  main.ts
frontend/: .env.ci  .env.example  .prettierrc  Dockerfile  README.md  docker-compose.db.yml  next.config.mjs  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.json
frontend/prisma/: schema.prisma
frontend/src/: env.mjs
openagent/: app.py
openagent/agents/: agent_factory.py  asset_management.py  block_explore.py  fallback.py  feed_explore.py  market_analysis.py  project_management.py  research_analyst.py
openagent/conf/: env.py  llm_provider.py
openagent/db/: models.py
openagent/executors/: block_stat_executor.py  coin_market_executor.py  defi_executor.py  feed_executor.py  feed_source_executor.py  funding_rate_executor.py  nft_balance_executor.py  nft_rank_executor.py  nft_search_executor.py  price_executor.py  project_executor.py  search_executor.py  swap_executor.py  tavily_executor.py  tg_news_executor.py  tg_util.py  token_balance_executor.py  token_util.py  transfer_executor.py
openagent/experts/: defi_expert.py  feed_expert.py  (+4 more)
public/: index.css
src/: .env.example  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yaml  docker-compose.yml  local-lm-deployment.yml  main.py  package.json  pyproject.toml
tests/: README.MD  README.md  base_test.py  compatible-models.mdx  conftest.py  gen_benchmark_html_report.py  generate_benchmark_report.py  run_test.py  run_tests.py  supervisor_chain.py  test_first_token_latency.py
wallet-backend/: .env.example  Dockerfile
wallet-contracts/: .gitignore
widget/: index.html  package.json  tsconfig.node.json  vite.config.ts
(+421 files in other folders)
